# algo-atlas

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  code-quality.yml  dependency-check.yml  release.yml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
config/: config.yaml.example
docs/: usage_examples.md
src/algo_atlas/: __init__.py  __main__.py  cli.py
src/algo_atlas/cli/: __init__.py  args.py  batch.py  input_handlers.py  workflows.py
src/algo_atlas/config/: __init__.py  settings.py
src/algo_atlas/core/: __init__.py  generator.py  scraper.py  test_parser.py  timeout.py  verifier.py
src/algo_atlas/languages/: __init__.py  base.py  c.py  cpp.py  csharp.py  go.py  java.py  javascript.py  kotlin.py  php.py  python.py  ruby.py  rust.py  swift.py  typescript.py
src/algo_atlas/utils/: __init__.py  file_manager.py  git_ops.py  github_ops.py  logger.py  prompts.py  vault_files.py  vault_readme.py  vault_search.py
tests/: __init__.py  conftest.py  test_c.py  test_cli.py  test_cpp.py  test_csharp.py  test_file_manager.py  test_go.py  test_java.py  test_javascript.py  test_kotlin.py  test_languages.py  test_logger.py  test_php.py  test_ruby.py  test_rust.py  test_scraper.py  test_swift.py  test_typescript.py  test_verifier.py
